Update upstart script.

--- a/payara.conf
+++ b/payara.conf
@@ -12,5 +12,5 @@ respawn
 respawn limit 99 5
 
 script
-    exec /var/apps/payara/server.py >> /var/log/payara.log 2>&1
+    exec /var/apps/payara/bin/payara /var/apps/payara/settings.py >> /var/log/payara.log 2>&1
 end script
