Fix a couple bugs.
- Run as ubuntu user.
- Fix error when cloning for first time.

--- a/conf/upstart.conf
+++ b/conf/upstart.conf
@@ -7,6 +7,8 @@ stop on shutdown
 respawn
 respawn limit 15 5
 
+setuid ubuntu
+
 script
     exec /var/apps/payara/bin/payara /var/apps/payara/settings.py
 end script
