Update ubuntu config. Automatically create buckets.

--- a/conf/upstart.conf
+++ b/conf/upstart.conf
@@ -8,6 +8,7 @@ respawn
 respawn limit 15 5
 
 setuid ubuntu
+setgid ubuntu
 
 script
     exec /var/apps/payara/bin/payara /var/apps/payara/settings.py
